--- a/.github/workflows/class-2-react.yml
+++ b/.github/workflows/class-2-react.yml
@@ -36,7 +36,7 @@ jobs:
       run: yarn build
      
     - name: Install Surge
-      run: npm install --golbal surge
+      run: npm install --global surge
      
     - name: Deploy to surge
       run: surge ./build react-first-app.surge.sh ${{secrets.SURGE_TOKEN}}
