--- a/.github/workflows/class-2-react.yml
+++ b/.github/workflows/class-2-react.yml
@@ -39,4 +39,4 @@ jobs:
       run: npm install --global surge
      
     - name: Deploy to surge
-      run: surge ./build react-first-app.surge.sh ${{secrets.SURGE_TOKEN}}
+      run: surge ./build react-first-app.surge.sh --token ${{secrets.SURGE_TOKEN}}
